--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <title>Midnight Barber Shiny Server</title>
+  <script>
+    if (location.search.indexOf("iframe") > -1) {
+      document.documentElement.className += " in-iframe";
+    }
+  </script>
   <!-- MIT license | Copyright Dean Attali 2016 -->
   <style type="text/css">
     body, html {
