--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <title>Midnight Barber Shiny Server</title>
+  <title>RCharlie's Shiny Server</title>
   <script>
     if (location.search.indexOf("iframe") > -1) {
       document.documentElement.className += " in-iframe";
@@ -156,9 +156,9 @@
 
 <body>
   <div id="titleBar">
-    <h1 id="title">The Midnight Barber's Shiny Server</h1>
-	<div id="links">
-	  <a href="http://midnightbarber.com">They call me the Midnight Barber</a><br/>
+  <br>
+    <h1 id="title">RCharlie's Shiny Server</h1>
+	<div id="links"><br/>
 	</div>
   </div>
   
