--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
       text-decoration: underline;
     }
     #titleBar {
-	  background: #fff;
+	  background: #eee;
 	  text-align: center;
-	  padding-bottom: 20px;
+    padding-top: 40px;
 	  border-bottom: 1px solid #ddd;
     }
     #title {
-      color: #666;
+    color: #404040;
 	  margin: 0;
 	  padding: 25px 0 15px;
 	  font-size: 60px;
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: 800;
     }
 	#links {
 	  font-size: 20px;
@@ -156,9 +158,7 @@
 
 <body>
   <div id="titleBar">
-  <br>
     <h1 id="title">RCharlie's Shiny Server</h1>
-	<div id="links"><br/>
 	</div>
   </div>
   
