--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <style type="text/css">
     body, html {
       font-family: Helvetica, Arial, sans-serif;
-      background-color: #eee;
+      background-color: #fff;
       color: #333;
       margin: 0;
       padding: 0;
@@ -25,10 +25,9 @@
       text-decoration: underline;
     }
     #titleBar {
-	  background: #eee;
+	  background: #fff;
 	  text-align: center;
     padding-top: 40px;
-	  border-bottom: 1px solid #ddd;
     }
     #title {
     color: #404040;
