--- a/index.html
+++ b/index.html
@@ -25,170 +25,186 @@
       text-decoration: underline;
     }
     #titleBar {
-	  background: #fff;
-	  text-align: center;
-    padding-top: 40px;
-    }
-    #title {
+     background: #fff;
+     text-align: center;
+     padding-top: 40px;
+   }
+   #title {
     color: #404040;
-	  margin: 0;
-	  padding: 25px 0 15px;
-	  font-size: 60px;
+    margin: 0;
+    padding: 25px 0 15px;
+    font-size: 60px;
     font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: 800;
-    }
-	#links {
-	  font-size: 20px;
-    }
-    #content {
-      margin-left: auto;
-      margin-right: auto;
-	  text-align: center;
-    }
-	#shinyapps-big {
-	  display: inline-block;
-	}
-	#shinyapps-big .shinyapp {
-	  color: #444;
-	  border-radius: 5px;
-	  border: 1px solid #ccc;
-	  width: 300px;
-	  float: left;
-	  margin-top: 20px;
-	  margin-left: 20px;
-  	  background: #fafafa;
-	  vertical-align: top;
-	  transition: all 250ms;
-	}
-	#shinyapps-big .shinyapp:hover {
-      box-shadow: 0 3px 7px #aaa;
-      border-color: #888;
-      background: #fff;
-	}
-	#shinyapps-big .shinyapp .apptitle {
-	  text-align: center;
-	  padding: 10px;
-	  border-bottom: 4px double #aaa;
-	  font-weight: bold;
-	  border-radius: 5px 5px 0 0;
-	  cursor: pointer;
-	  font-size: 1.5em;
-	}
-	#shinyapps-big .shinyapp .appimg {
-	  width: 100%;
-	  cursor: pointer;
-	}
-	#shinyapps-big .applink {
-	  color: inherit;
-	  text-decoration: none !important;
-	}
-	#shinyapps-big .shinyapp .appdesc {
-	  text-align: left;
-	  padding: 10px;
-	  border-top: 4px double #aaa;
-	  margin-top: -4px;
-	  font-size: 15px;
-	  line-height: 1.3em;
-	  border-radius: 0 0 5px 5px;
-	}
-    @media only screen and (min-width: 980px) { 
-      #content {
-      	max-width: 980px;
-      }
-      #shinyapps-big .shinyapp:nth-child(3n+1) {
-        clear: left;
-        margin-left: 0;
-      }
-    }
-    @media only screen and (max-width: 980px) { 
-      #content {
-      	max-width: 650px;
-      }
-      #shinyapps-big .shinyapp:nth-child(2n+1) {
-        clear: left;
-        margin-left: 0;
-      }
-    }    
-    @media only screen and (max-width: 650px) and (min-width: 510px) { 
-      #content {
-      	max-width: 500px;
-      }
-      #shinyapps-big .shinyapp:nth-child(2n+1) {
-        clear: left;
-        margin-left: 0;
-      }
-      #shinyapps-big .shinyapp {
-      	margin-top: 10px;
-      	margin-left: 10px;
-      	width: 230px;
-      }
-    }    
-    @media only screen and (max-width: 510px) { 
-      #content {
-      	max-width: 350px;
-      }
-      #shinyapps-big .shinyapp:nth-child(1n+1) {
-        clear: left;
-        margin-left: 0;
-      }
-    }        
-    @media only screen and (max-width: 750px) {
-      #title {
-    	font-size: 40px;
-    	padding: 20px 0 10px;
-      }
-      #titleBar {
-      	padding-bottom: 15px;
-      }
-      #links {
-      	font-size: 17px;
-      }
-    }	
-	#otherlinks {
-	  text-align: left;
-	  margin-top: 100px;
-	}
-	
-    .shiny-apps li {
-      margin-bottom: 8px;
-    }
-  </style>
+  }
+  #links {
+   font-size: 20px;
+ }
+ #content {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+#shinyapps-big {
+ display: inline-block;
+}
+#shinyapps-big .shinyapp {
+ color: #444;
+ border-radius: 5px;
+ border: 1px solid #ccc;
+ width: 300px;
+ float: left;
+ margin-top: 20px;
+ margin-left: 20px;
+ background: #fafafa;
+ vertical-align: top;
+ transition: all 250ms;
+}
+#shinyapps-big .shinyapp:hover {
+  box-shadow: 0 3px 7px #aaa;
+  border-color: #888;
+  background: #fff;
+}
+#shinyapps-big .shinyapp .apptitle {
+ text-align: center;
+ padding: 10px;
+ border-bottom: 4px double #aaa;
+ font-weight: bold;
+ border-radius: 5px 5px 0 0;
+ cursor: pointer;
+ font-size: 1.5em;
+}
+#shinyapps-big .shinyapp .appimg {
+ width: 100%;
+ cursor: pointer;
+}
+#shinyapps-big .applink {
+ color: inherit;
+ text-decoration: none !important;
+}
+#shinyapps-big .shinyapp .appdesc {
+ text-align: left;
+ padding: 10px;
+ border-top: 4px double #aaa;
+ margin-top: -4px;
+ font-size: 15px;
+ line-height: 1.3em;
+ border-radius: 0 0 5px 5px;
+}
+@media only screen and (min-width: 980px) { 
+  #content {
+   max-width: 980px;
+ }
+ #shinyapps-big .shinyapp:nth-child(3n+1) {
+  clear: left;
+  margin-left: 0;
+}
+}
+@media only screen and (max-width: 980px) { 
+  #content {
+   max-width: 650px;
+ }
+ #shinyapps-big .shinyapp:nth-child(2n+1) {
+  clear: left;
+  margin-left: 0;
+}
+}    
+@media only screen and (max-width: 650px) and (min-width: 510px) { 
+  #content {
+   max-width: 500px;
+ }
+ #shinyapps-big .shinyapp:nth-child(2n+1) {
+  clear: left;
+  margin-left: 0;
+}
+#shinyapps-big .shinyapp {
+ margin-top: 10px;
+ margin-left: 10px;
+ width: 230px;
+}
+}    
+@media only screen and (max-width: 510px) { 
+  #content {
+   max-width: 350px;
+ }
+ #shinyapps-big .shinyapp:nth-child(1n+1) {
+  clear: left;
+  margin-left: 0;
+}
+}        
+@media only screen and (max-width: 750px) {
+  #title {
+   font-size: 40px;
+   padding: 20px 0 10px;
+ }
+ #titleBar {
+   padding-bottom: 15px;
+ }
+ #links {
+   font-size: 17px;
+ }
+}	
+#otherlinks {
+ text-align: left;
+ margin-top: 100px;
+}
+
+.shiny-apps li {
+  margin-bottom: 8px;
+}
+</style>
 </head>
 
 <body>
   <div id="titleBar">
     <h1 id="title">RCharlie's Shiny Server</h1>
-	</div>
   </div>
-  
-  <div id="content">
-    <div id="shinyapps-big">
-		<div class="shinyapp">
-		  <a class="applink" href="./Campaign/">
-			<div class="apptitle">
-			  #TweetOrDie
-			</div>
-			<img class="appimg" src="./img/campaign.png" />
-		  </a>
-		  <div class="appdesc">
-			Watch Twitter react to the 2016 Presidential Candidates in real time <a href="./Campaign/">here</a>.
-		  </div>
-		</div>	
-		
-		<div class="shinyapp">
-		  <a class="applink" href="./metro/">
-			<div class="apptitle">
-			  Metropocalypse
-			</div>
-			<img class="appimg" src="./img/metro.png" />
-		  </a>
-		  <div class="appdesc">
-			WMATA SafeTrack Survival Guide
-		  </div>
-		</div>
-    </div>
-	
-	<div style="clear:both;"></div>
-  </div>
+</div>
+
+<div id="content">
+
+  <div id="shinyapps-big">
+
+   <div class="shinyapp">
+      <a class="applink" href="./sentify/">
+       <div class="apptitle">
+         Spotify Song Sentiment
+       </div>
+       <img class="appimg" src="./img/sentify.png" />
+     </a>
+     <div class="appdesc">
+       Calculate track happiness for any artist using Spotify's API
+     </div>
+   </div>
+
+<!--     <div class="shinyapp">
+      <a class="applink" href="./Campaign/">
+       <div class="apptitle">
+         #TweetOrDie
+       </div>
+       <img class="appimg" src="./img/campaign.png" />
+     </a>
+     <div class="appdesc">
+       Watch Twitter react to the 2016 Presidential Candidates in real time <a href="./Campaign/">here</a>.
+     </div>
+   </div>	
+
+   <div class="shinyapp">
+    <a class="applink" href="./metro/">
+     <div class="apptitle">
+       Metropocalypse
+     </div>
+     <img class="appimg" src="./img/metro.png" />
+   </a>
+   <div class="appdesc">
+     WMATA SafeTrack Survival Guide
+   </div> -->
+
+ </div>
+
+</div>
+
+<div style="clear:both;"></div>
+</div>
 </body>
 </html>
