add blank target

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <div id="shinyapps-big">
 
    <div class="shinyapp">
-      <a class="applink" href="./sentify/">
+      <a class="applink" href="./sentify/" target="_blank">
        <div class="apptitle">
          Spotify Song Sentiment
        </div>
