--- a/index.html
+++ b/index.html
@@ -168,12 +168,12 @@
    <div class="shinyapp">
       <a class="applink" href="./sentify/" target="_blank">
        <div class="apptitle">
-         Spotify Song Sentiment
+         Sentify
        </div>
        <img class="appimg" src="./img/sentify.png" />
      </a>
      <div class="appdesc">
-       Calculate track happiness for any artist using Spotify's API
+       Analyze musical sentiment for your favorite artists and Spotify playlists
      </div>
    </div>
 
