--- a/index.html
+++ b/index.html
@@ -11,12 +11,27 @@
   <!-- MIT license | Copyright Dean Attali 2016 -->
   <style type="text/css">
     body, html {
-      font-family: Helvetica, Arial, sans-serif;
+      /*font-family: Helvetica, Arial, sans-serif;*/
+      font-family: 'FixedsysExcelsior301Regular';
       background-color: #fff;
       color: #333;
       margin: 0;
       padding: 0;
     }
+
+    @font-face {
+    font-family: 'FixedsysExcelsior301Regular';
+    src: url('font/fsex300-webfont.eot');
+    src: url('font/fsex300-webfont.eot?#iefix') format('embedded-opentype'),
+         url('font/fsex300-webfont.woff') format('woff'),
+         url('font/fsex300-webfont.ttf') format('truetype'),
+         url('font/fsex300-webfont.svg#FixedsysExcelsior301Regular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    -webkit-font-smoothing:aliased;
+    font-smooth:never;
+    }
+
     a {
       text-decoration: none;
       color: #1E6DE8;
@@ -34,7 +49,9 @@
     margin: 0;
     padding: 25px 0 15px;
     font-size: 60px;
-    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    /*font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    */
+    font-family: 'FixedsysExcelsior301Regular';
     font-weight: 800;
   }
   #links {
