add world of sound

--- a/index.html
+++ b/index.html
@@ -206,28 +206,16 @@
      </div>
    </div>
 
-<!--     <div class="shinyapp">
-      <a class="applink" href="./Campaign/">
-       <div class="apptitle">
-         #TweetOrDie
-       </div>
-       <img class="appimg" src="./img/campaign.png" />
-     </a>
-     <div class="appdesc">
-       Watch Twitter react to the 2016 Presidential Candidates in real time <a href="./Campaign/">here</a>.
-     </div>
-   </div>	
-
    <div class="shinyapp">
-    <a class="applink" href="./metro/">
+    <a class="applink" href="./world_of_sound/">
      <div class="apptitle">
-       Metropocalypse
+       World of Sound
      </div>
-     <img class="appimg" src="./img/metro.png" />
-   </a>
-   <div class="appdesc">
-     WMATA SafeTrack Survival Guide
-   </div> -->
+     <img class="appimg" src="./img/world_of_sound.png" />
+    </a>
+    <div class="appdesc">
+       Geographic map of the most disinctive music per country
+   </div>
 
  </div>
 
