remove music map

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
      </div>
    </div>
 
-   <div class="shinyapp">
+<!--    <div class="shinyapp">
     <a class="applink" href="./world_of_sound/">
      <div class="apptitle">
        World of Sound
@@ -215,7 +215,7 @@
     </a>
     <div class="appdesc">
        Geographic map of the most disinctive music per country
-   </div>
+   </div> -->
 
  </div>
 
