--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
       document.documentElement.className += " in-iframe";
     }
   </script>
+  <!-- Hotjar Tracking Code for http://www.rcharlie.net -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:855787,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
   <!-- MIT license | Copyright Dean Attali 2016 -->
   <style type="text/css">
     body, html {
@@ -108,7 +119,7 @@
  line-height: 1.3em;
  border-radius: 0 0 5px 5px;
 }
-@media only screen and (min-width: 980px) { 
+@media only screen and (min-width: 980px) {
   #content {
    max-width: 980px;
  }
@@ -117,7 +128,7 @@
   margin-left: 0;
 }
 }
-@media only screen and (max-width: 980px) { 
+@media only screen and (max-width: 980px) {
   #content {
    max-width: 650px;
  }
@@ -125,8 +136,8 @@
   clear: left;
   margin-left: 0;
 }
-}    
-@media only screen and (max-width: 650px) and (min-width: 510px) { 
+}
+@media only screen and (max-width: 650px) and (min-width: 510px) {
   #content {
    max-width: 500px;
  }
@@ -139,8 +150,8 @@
  margin-left: 10px;
  width: 230px;
 }
-}    
-@media only screen and (max-width: 510px) { 
+}
+@media only screen and (max-width: 510px) {
   #content {
    max-width: 350px;
  }
@@ -148,7 +159,7 @@
   clear: left;
   margin-left: 0;
 }
-}        
+}
 @media only screen and (max-width: 750px) {
   #title {
    font-size: 40px;
@@ -160,7 +171,7 @@
  #links {
    font-size: 17px;
  }
-}	
+}
 #otherlinks {
  text-align: left;
  margin-top: 100px;
