--- a/index.html
+++ b/index.html
@@ -215,17 +215,16 @@
      </div>
    </div>
 
-<!--    <div class="shinyapp">
-    <a class="applink" href="./world_of_sound/">
+  <div class="shinyapp">
+    <a class="applink" href="./SpotiFest/">
      <div class="apptitle">
-       World of Sound
+       SpotiFest
      </div>
-     <img class="appimg" src="./img/world_of_sound.png" />
+     <img class="appimg" src="./img/spotifest.png" />
     </a>
     <div class="appdesc">
-       Geographic map of the most disinctive music per country
-   </div> -->
-
+       Find music festivals based on your favorite Spotify tunes
+   </div>
  </div>
 
 </div>
